--- a/Cassini2/Base.lproj/Main.storyboard
+++ b/Cassini2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Fn8-ZJ-yrV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lOR-Jq-8fr">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,6 +9,72 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Cassini View Controller-->
+        <scene sceneID="7M6-Km-PWZ">
+            <objects>
+                <viewController id="8gN-zh-saq" customClass="CassiniViewController" customModule="Cassini2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ewZ-zy-OyY"/>
+                        <viewControllerLayoutGuide type="bottom" id="UMu-Gp-ef4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HcS-sa-jVZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="B9y-In-TTm">
+                                <rect key="frame" x="112" y="223" width="152" height="222"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0zR-yU-rg4">
+                                        <rect key="frame" x="0.0" y="0.0" width="152" height="48"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Bucharest"/>
+                                        <connections>
+                                            <segue destination="Fn8-ZJ-yrV" kind="show" identifier="Bucharest" id="YrO-To-KCK"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rqg-vJ-DKp">
+                                        <rect key="frame" x="0.0" y="58" width="152" height="48"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Earth"/>
+                                        <connections>
+                                            <segue destination="Fn8-ZJ-yrV" kind="show" identifier="Earth" id="Wli-O3-FZe"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LgD-cM-pkd">
+                                        <rect key="frame" x="0.0" y="116" width="152" height="48"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Cassini 14k"/>
+                                        <connections>
+                                            <segue destination="Fn8-ZJ-yrV" kind="show" identifier="Cassini" id="f4w-jG-07V"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Ve-hb-fmR">
+                                        <rect key="frame" x="0.0" y="174" width="152" height="48"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Saturn"/>
+                                        <connections>
+                                            <segue destination="Fn8-ZJ-yrV" kind="show" identifier="Saturn" id="c5Z-7W-sns"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="B9y-In-TTm" firstAttribute="centerX" secondItem="HcS-sa-jVZ" secondAttribute="centerX" id="CLo-03-dlW"/>
+                            <constraint firstItem="B9y-In-TTm" firstAttribute="centerY" secondItem="HcS-sa-jVZ" secondAttribute="centerY" id="Ynd-nr-QHu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3xt-4I-1QM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9B6-bd-CwC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-95.200000000000003" y="-106.59670164917542"/>
+        </scene>
         <!--Image View Controller-->
         <scene sceneID="tQv-Bb-pUt">
             <objects>
@@ -20,12 +86,54 @@
                     <view key="view" contentMode="scaleToFill" id="VQy-fE-7dN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="AS7-0V-z9M">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                                <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iei-DC-pA5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Iei-DC-pA5" firstAttribute="leading" secondItem="VQy-fE-7dN" secondAttribute="leading" id="3DV-J5-oeb"/>
+                            <constraint firstItem="Iei-DC-pA5" firstAttribute="top" secondItem="VQy-fE-7dN" secondAttribute="top" id="5RB-Cf-IFq"/>
+                            <constraint firstItem="AS7-0V-z9M" firstAttribute="centerY" secondItem="Iei-DC-pA5" secondAttribute="centerY" id="Dfo-2E-6Ua"/>
+                            <constraint firstItem="Iei-DC-pA5" firstAttribute="bottom" secondItem="dh0-ca-itS" secondAttribute="top" id="Har-Yp-wEt"/>
+                            <constraint firstAttribute="trailing" secondItem="Iei-DC-pA5" secondAttribute="trailing" id="btc-cs-8qI"/>
+                            <constraint firstItem="AS7-0V-z9M" firstAttribute="centerX" secondItem="Iei-DC-pA5" secondAttribute="centerX" id="wPU-Uy-lix"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="Iei-DC-pA5" id="vJG-x6-mI9"/>
+                        <outlet property="spinner" destination="AS7-0V-z9M" id="NJi-hh-KJ4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vjs-Xv-Gr9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-258" y="-105"/>
+            <point key="canvasLocation" x="680.79999999999995" y="-105.69715142428787"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="pH1-n4-10V">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lOR-Jq-8fr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Opn-ZE-rNa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8gN-zh-saq" kind="relationship" relationship="rootViewController" id="mrf-sH-t8s"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HBg-66-YuC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-895" y="-106"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="f4w-jG-07V"/>
+    </inferredMetricsTieBreakers>
 </document>
